force-app/main/default/objects/AIViolationEvent__e/AIViolationEvent__e.object-meta.xml
<CustomObject>
    <description>Publishes the details of a detected violation at the moment it&apos;s identified, decoupled from the triggering transaction. A subscriber trigger performs the actual AIViolation__c insert asynchronously, so a burst of violations, or a violation detected mid-failure, never blocks or is lost to the original transaction&apos;s outcome.</description>
    <label>AI Violation Event</label>
    <pluralLabel>AI Violation Events</pluralLabel>
</CustomObject>