force-app/main/default/objects/AIViolationEvent__e/fields/ConversationId__c.field-meta.xml
<CustomField>
    <fullName>ConversationId__c</fullName>
    <description>The Id of the conversation this violation occurred in, if applicable.</description>
    <inlineHelpText>Populated automatically when the violation occurs within an active conversation. Left blank if not applicable.</inlineHelpText>
    <label>Conversation Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>