force-app/main/default/objects/AIViolationEvent__e/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <description>Specifics of what was requested or attempted, without raw sensitive content.</description>
    <inlineHelpText>Populated automatically with enough detail to review the violation later. Never includes raw PII or prohibited content itself.</inlineHelpText>
    <label>Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>