force-app/main/default/objects/AIViolationEvent__e/fields/OccurredAt__c.field-meta.xml
<CustomField>
    <fullName>OccurredAt__c</fullName>
    <description>When this violation occurred.</description>
    <inlineHelpText>Populated automatically at the moment of detection.</inlineHelpText>
    <label>Occurred At</label>
    <type>DateTime</type>
</CustomField>