force-app/main/default/objects/AIViolationEvent__e/fields/RequestBlocked__c.field-meta.xml
<CustomField>
    <fullName>RequestBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the underlying request was blocked as a result.</description>
    <inlineHelpText>Reflects the Block Request setting on the rule that fired, at the moment it fired.</inlineHelpText>
    <label>Request Blocked</label>
    <type>Checkbox</type>
</CustomField>