force-app/main/default/objects/AIViolationEvent__e/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>How serious this violation is.</description>
    <inlineHelpText>Populated automatically based on the violation type. Used by the subscriber to set severity on the resulting record.</inlineHelpText>
    <label>Severity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>