force-app/main/default/objects/AIViolationEvent__e/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <description>The Id of the user this violation relates to.</description>
    <inlineHelpText>Populated automatically from the running user at the moment the violation is detected.</inlineHelpText>
    <label>User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>