force-app/main/default/objects/AIViolationEvent__e/fields/ViolationRuleId__c.field-meta.xml
<CustomField>
    <fullName>ViolationRuleId__c</fullName>
    <description>The Id of the rule that detected this violation.</description>
    <inlineHelpText>Populated automatically from the AI Violation Rule that fired.</inlineHelpText>
    <label>Violation Rule Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>