force-app/main/default/objects/AIViolationEvent__e/fields/ViolationType__c.field-meta.xml
<CustomField>
    <fullName>ViolationType__c</fullName>
    <description>The category of violation, copied from the triggering rule at the time it fired.</description>
    <inlineHelpText>Populated automatically from the rule&apos;s Violation Type Produced value. Stored as plain text since Platform Events can&apos;t reference a custom object&apos;s picklist value set.</inlineHelpText>
    <label>Violation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>